Movement animations, ArrowKeys binds, MushroomZones

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     }
 </style>
 
-<canvas></canvas>
+<canvas></canvas> <!-- Element canvas, na którym będzie renderowana gra -->
+
+<!-- Skrypty JavaScript -->
+<!-- Definicje klas oraz logika gry -->
+<script src="data/mushroomsZones.js"></script>
 <script src="data/collisions.js"></script>
 <script src="classes.js"></script>
 <script src="index.js"></script>
