--- a/index.html
+++ b/index.html
@@ -1,8 +1,51 @@
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap');
     body {
         background-color: black;
         display: grid;
         place-items: center;
+    }
+    div {
+        font-family: 'Pixelify Sans', sans-serif;
+        width: 500px;
+        height: 500px;
+        display: grid;
+        place-items: center;
+        /* background-color: black; */
+        position: absolute;
+        color: white;
+        cursor: url('./img/cursor.png'), auto;
+    }
+    div > * {
+        cursor: url('./img/cursor.png'), auto;
+    }
+    img {
+        position: absolute;
+    }
+    h1 {
+        position: absolute;
+        top: -225px;
+        left: -200px;
+        font-size: 7rem;
+        text-wrap: nowrap;
+    }
+    canvas {
+        display: none;
+    }
+    #start-button {
+        position: absolute;
+        z-index: 9;
+        top: 125px;
+        width: 150px;
+        height: 50px;
+        padding: 5px;
+        margin: 15px;
+    }
+    p {
+        position: absolute;
+        z-index: 9;
+        top: 0px;
+        font-size: 2rem;
     }
 </style>
 
