--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>Mushroom Picker</title>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap');
     body {
@@ -11,7 +12,6 @@
         height: 500px;
         display: grid;
         place-items: center;
-        /* background-color: black; */
         position: absolute;
         color: white;
         cursor: url('./img/cursor.png'), auto;
