--- a/index.html
+++ b/index.html
@@ -47,6 +47,22 @@
         top: 0px;
         font-size: 2rem;
     }
+    #ingameScore {
+        color: white;
+        position: absolute;
+        z-index: 9;
+        top: 0px;
+        left: 0px;
+        font-size: 2rem;
+    }
+    #ingameTime {
+        color: white;
+        position: absolute;
+        z-index: 9;
+        top: 0px;
+        left: 0px;
+        font-size: 2rem;
+    }
 </style>
 
 <canvas></canvas> <!-- Element canvas, na którym będzie renderowana gra -->
